# custom-alias

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  dya_old.yaml  pyproject.toml  requirements.txt  setup.py  short_command.py  system_rules.txt  tests.py
.agent/rules/: config-file-rules.md  global-system-rules.md  global-test-rules.md  helper-rules.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  tests.yml
docs/: commands.md  configuration.md  dicts.md  dynamic-dicts.md  features.md  getting-started.md  helper.md  interactive-mode.md  locals.md
docs/examples/aws/: README.md  dya.yaml
docs/examples/azure/: README.md  dya.yaml
docs/examples/custom-cli/: README.md  infra.yaml
docs/examples/gcp/: README.md  dya.yaml
docs/examples/oci/: README.md  dya.yaml
packaging/macos/homebrew/: dynamic-alias.rb
packaging/macos/scripts/: build_pkg.sh  distribution.xml
src/dynamic_alias/: cache.py  cli.py  completer.py  config.py  constants.py  crypto.py  executor.py  helper_formatter.py  main.py  models.py  resolver.py  shell.py  utils.py  validator.py
tests/: dya.yaml  test_bundled.py  test_cache_management.py  test_cache_ttl.py  test_chaining.py  test_circular_reference.py  test_cli_help.py  test_completer.py  test_crypto.py  test_dict_access_modes.py  test_dynamic_config.py  test_encrypted_cache.py  test_executor_cache_sync.py  test_helper.py  test_history.py  test_integration.py  test_interactive_management.py  test_json_validation.py  test_locals.py  test_set_locals.py  test_shell_mode.py  test_shell_sync.py  test_strict.py  test_style_config.py  test_terminal_state.py  test_timeout.py  test_validator.py
