[custom-build]
name = "Dynamic Alias"
shortcut = "dya"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic_alias"
version = "1.1.0"
authors = [
  { name="Natan Medeiros", email="natanmedeirosrn@gmail.com" },
]
description = "Dynamic Alias is a powerful CLI application that allows users to create 'aliases with superpowers'. It transforms complex command-line interactions into simple, autocompletable shortcuts, leveraging dynamic data sources and structured configurations."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "prompt_toolkit",
    "PyYAML",
    "cryptography",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
keywords = [
    "CLI",
    "command-line",
    "alias",
    "autocomplete",
    "shell",
    "terminal",
    "devops",
    "infrastructure",
    "automation",
]
dynamic = ["scripts"]

[project.urls]
Homepage = "https://github.com/natanmedeiros/dynamic-alias"
Repository = "https://github.com/natanmedeiros/dynamic-alias"
Documentation = "https://github.com/natanmedeiros/dynamic-alias#documentation"
Issues = "https://github.com/natanmedeiros/dynamic-alias/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dynamic_alias = ["*.yaml"]

